<resources>
    <string name="app_name">hawasil music player</string>

    <string name="TEMPLATE_artist_album_song"> %s - %s </string>
    <string name="TEMPLATE_song_count">%d song</string>

    <string name="Artists">Artists</string>
    <string name="Albums">Albums</string>
    <string name="Songs">Songs</string>
    <string name="PlayLists">Play list</string>
    <string name="Artist_name">Artist name</string>
    <string name="Song_name">Song name</string>
    <string name="Title">Title</string>
    <string name="Duration">Duration</string>
    <string name="Count">Count</string>
    <string name="Library">Library</string>
    <string name="Favorite">Favorite</string>
    <string name="Folder">Folder</string>
    <string name="Search">Search</string>
    <string name="Hawasil">Hawasil</string>
    <string name="Creating_Playlist">Creating Playlist</string>
    <string name="Name">Name</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="notification_channel">com.nasserkhosravi</string>
    <string name="notification_channel_description">playing music</string>
    <string name="notification_skip_to_previous">previous</string>
    <string name="notification_play">play</string>
    <string name="notification_pause">pause</string>
    <string name="notification_skip_to_next">next</string>
</resources>
