<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_background"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/Creating_Playlist"
        android:textColor="@color/secondary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:hint="@string/Name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textCursorDrawable="@color/primary"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Confirm"
        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edText"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/btnConfirm"
        android:text="@string/Cancel"
        android:textColor="@color/secondary_text"
        />
</RelativeLayout>